--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>About</title>
+    <title>Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -48,11 +48,11 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
-                      <li class="none">
-            <strong>About</strong>
+            <strong>Distribution Management</strong>
           </li>
+                      <li class="none">
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
@@ -95,7 +95,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About Jasig Central Authentication Service Add Ons<a name="About_Jasig_Central_Authentication_Service_Add_Ons"></a></h2><a name="About_Jasig_Central_Authentication_Service_Add_Ons"></a><p>A collection of useful Jasig CAS SSO Server add-ons and extensions.</p></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>The following is the distribution management information used by this project.</p><div class="section"><h3>Repository - sonatype-nexus-staging<a name="Repository_-_sonatype-nexus-staging"></a></h3><a name="Repository_-_sonatype-nexus-staging"></a><a class="externalLink" href="https://oss.sonatype.org/service/local/staging/deploy/maven2/">https://oss.sonatype.org/service/local/staging/deploy/maven2/</a></div><div class="section"><h3>Snapshot Repository - sonatype-nexus-snapshots<a name="Snapshot_Repository_-_sonatype-nexus-snapshots"></a></h3><a name="Snapshot_Repository_-_sonatype-nexus-snapshots"></a><a class="externalLink" href="https://oss.sonatype.org/content/repositories/snapshots/">https://oss.sonatype.org/content/repositories/snapshots/</a></div></div>
       </div>
     </div>
     <div class="clear">
