--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>About</title>
+    <title>Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -51,8 +51,8 @@
                           <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
             </li>
                       <li class="none">
-            <strong>About</strong>
-          </li>
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
@@ -81,8 +81,8 @@
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
                       <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
-            </li>
+            <strong>Project Summary</strong>
+          </li>
               </ul>
         </li>
           </ul>
@@ -95,7 +95,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About Jasig Central Authentication Service Add Ons<a name="About_Jasig_Central_Authentication_Service_Add_Ons"></a></h2><a name="About_Jasig_Central_Authentication_Service_Add_Ons"></a><p>A collection of useful Jasig CAS SSO Server add-ons and extensions.</p></div>
+        <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>Jasig Central Authentication Service Add Ons</td></tr><tr class="a"><td>Description</td><td>A collection of useful Jasig CAS SSO Server add-ons and extensions.</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="http://unicon.github.com/cas-addons/">http://unicon.github.com/cas-addons/</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>Unicon, inc.</td></tr><tr class="a"><td>URL</td><td><a class="externalLink" href="http://unicon.net">http://unicon.net</a></td></tr></table></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>net.unicon.cas</td></tr><tr class="a"><td>ArtifactId</td><td>cas-addons</td></tr><tr class="b"><td>Version</td><td>0.8-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>jar</td></tr><tr class="b"><td>JDK Rev</td><td>1.6</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
